src/App.css
* {
  box-sizing: border-box;
}

body {
  padding: 20px;
  margin: 0;
  background-color: #0b2434;
  font-family: "Karla", sans-serif;
}

main {
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-direction: column;
  max-width: 460px;
  padding: 33px 34.5px 32px;
  border-radius: 5px;
  margin: 0 auto 50px;
  background-color: #f5f5f5;
}

.title {
  margin: 0;
  font-size: 36px;
}

.instructions {
  padding-inline: 10px;
  margin: 0;
  color: #4a4e74;
  font-family: "Inter", sans-serif;
  font-weight: 400;
  text-align: center;
}

.you-won {
  margin: 7px 0 0;
  font-size: 22px;
}

.count-timer-container {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: 225px;
  height: 25px;
  margin: 12px 0 0;
  color: #4a4e74;
}

.timer-container {
  display: flex;
  align-items: center;
  font-size: 18px;
}

.timer,
.roll-count {
  margin: 0;
}

.timer {
  margin-left: 4px;
}

.roll-count {
  font-size: 18px;
}

.dice-container {
  display: grid;
  grid-template: auto auto / repeat(5, 1fr);
  gap: 12px;
  margin: 10px 0 30px;
}

.die-face {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 50px;
  width: 50px;
  border-radius: 10px;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
  cursor: pointer;
}

.die-face.is-held {
  background-color: #59e391;
}

.die-face--inner {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 51px;
  width: 44px;
}

.roll-btn {
  height: 50px;
  width: 150px;
  border: none;
  border-radius: 6px;
  background-color: #5035ff;
  color: white;
  font-family: "Karla", sans-serif;
  font-size: 1.2rem;
  cursor: pointer;
  box-shadow: 0px 3.2px 7.68px 0px rgba(0, 0, 0, 0.18);
}

.roll-btn:focus {
  outline: none;
}

.roll-btn:active {
  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
}

.fastest-time {
  margin-bottom: 0;
  color: #4a4e74;
  font-size: 17px;
}

.fastest-time span {
  margin-right: 1px;
}

.footer {
  width: 100%;
  color: #f5f5f5;
  font-size: 14px;
  font-weight: 300;
  text-align: center;
}

.footer a {
  color: #59e391;
  text-decoration: none;
}

@media screen and (min-width: 768px) {
  .app {
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
  }

  .app--inner {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .dice-container {
    gap: 20px;
  }
}

